--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -1,12 +1,19 @@
 {
     "extends": [
-      "airbnb",
-      "plugin:react/recommended"
+      "airbnb"
     ],
-    "settings": {
-      "react": {
-        "createClass": "createReactClass",
-        "pragma": "React",
-      }
+    "plugins": [
+      "react",
+      "jsx-a11y"
+    ],
+    "rules": {
+      "import/no-extraneous-dependencies": [
+        "error",
+        {
+          "devDependencies": true,
+          "optionalDependencies": true,
+          "peerDependencies": true
+        }
+      ]
     }
 }
