--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
   "dependencies": {
     "react": "^16.6.3",
     "react-dom": "^16.6.3",
+    "react-transition-group": "^2.5.0",
     "styled-components": "^4.1.2"
   },
   "scripts": {
