--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -9,6 +9,7 @@
       "jsx-a11y"
     ],
     "rules": {
+      "react/prop-types": 0,
       "linebreak-style": 0,
       "import/no-extraneous-dependencies": [
         "error",
