--- a/package.json
+++ b/package.json
@@ -17,10 +17,14 @@
     "@storybook/react": "^4.0.12",
     "babel-eslint": "^10.0.1",
     "babel-loader": "^8.0.4",
+    "enzyme": "^3.8.0",
+    "enzyme-adapter-react-16": "^1.7.1",
     "eslint": "^5.9.0",
     "eslint-config-airbnb": "^17.1.0",
     "eslint-loader": "^2.1.1",
     "eslint-plugin-import": "^2.14.0",
+    "jest": "^23.6.0",
+    "jest-enzyme": "^7.0.1",
     "webpack": "^4.27.1",
     "webpack-clean-plugin": "^0.2.3",
     "webpack-cli": "^3.1.2"
