--- a/package.json
+++ b/package.json
@@ -8,14 +8,16 @@
   "license": "MIT",
   "private": false,
   "devDependencies": {
-    "@babel/core": "^7.2.0",
+    "@babel/core": "^7.2.2",
     "@babel/preset-env": "^7.2.0",
     "@babel/preset-react": "^7.0.0",
     "@storybook/addon-actions": "^4.0.12",
     "@storybook/addon-links": "^4.0.12",
     "@storybook/addons": "^4.0.12",
     "@storybook/react": "^4.0.12",
+    "babel-core": "7.0.0-bridge.0",
     "babel-eslint": "^10.0.1",
+    "babel-jest": "^23.6.0",
     "babel-loader": "^8.0.4",
     "enzyme": "^3.8.0",
     "enzyme-adapter-react-16": "^1.7.1",
@@ -25,6 +27,7 @@
     "eslint-plugin-import": "^2.14.0",
     "jest": "^23.6.0",
     "jest-enzyme": "^7.0.1",
+    "regenerator-runtime": "^0.13.1",
     "webpack": "^4.27.1",
     "webpack-clean-plugin": "^0.2.3",
     "webpack-cli": "^3.1.2"
@@ -37,6 +40,7 @@
     "styled-components": "^4.1.2"
   },
   "scripts": {
+    "test": "jest --watchAll",
     "eslint:init": "eslint --init",
     "storybook": "start-storybook -p 6006",
     "build-storybook": "build-storybook"
