--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "jest": "^23.6.0",
     "jest-enzyme": "^7.0.1",
     "regenerator-runtime": "^0.13.1",
+    "uuid": "^3.3.2",
     "webpack": "^4.27.1",
     "webpack-clean-plugin": "^0.2.3",
     "webpack-cli": "^3.1.2"
