--- a/package.json
+++ b/package.json
@@ -43,6 +43,7 @@
   },
   "scripts": {
     "test": "jest --watchAll",
+    "test:coverage": "jest --coverage",
     "eslint:init": "eslint --init",
     "storybook": "start-storybook -p 6006",
     "build-storybook": "build-storybook"
