--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "realert",
   "version": "0.1.0",
-  "description": "Sweet simple JavaScript alert alternative for React with styled-components",
+  "description": "Sweet simple JavaScript alert alternative for React built with styled-components",
   "main": "build/index.js",
   "repository": "https://github.com/zakariaharti/realert.git",
   "author": "zakariaharti <zakariya.harti@gmail.com>",
